# skeletongraph

./: .gitignore  .skeletongraphignore  AGENT_RULES.md  CLAUDE.md  CURSOR_SETUP.md  EVALUATION_WORKFLOW.md  GEMINI_DIAGRAM_PROMPT.md  README.md  antigravity_smoke.md  claude_smoke.md  codex_smoke.md  copilot_smoke.md  cursor_smoke.md  evaluation_dataset.md  mcp.example.json  mcp.json  pyproject.toml  scratch_verify.py  setup_swe_30.py  smoke_test_prompts.md  test_docstring_extraction.py
.cursor/: mcp.json  settings.json
.cursor/rules/: skeletongraph.mdc
docs/: ARCHITECTURE_DIAGRAM_PIPELINE.md  ARM_FLOWS.md  EVAL_PLAN_FINAL.md  IMPLEMENTATION_PLAN.md  RESEARCH.md  RESEARCH_PLAN.md  blueprint.md  changes-2026-05-12.md  diagram_prompts.md  evaluation.md  swe_bench_runbook.md
docs/paper/: references.bib  skeletongraph.tex
eval/: EVAL_GUIDE.md  EVAL_STRATEGY.md  README.md  REPRODUCIBILITY.md  commands.md  golden_dataset.md  ide_prompts.md  kv_cache.py  make_dataset.py  metrics.py  offline_retrieval_eval.py  retrieval_eval.py  run_eval.py  run_stage0.py  stage0.ps1  stage0.sh  swe_bench_harness.py  tasks.json
eval/agent/: STAGES.md  __init__.py  aggregate.py  check_builds.py  config.py  isolation.py  mswea_native.yaml  mswea_sg.yaml  plots.py  prefetch.py  prefetch_embeddings.py  profiles.py  react.py  run_agent.py  run_all.py  run_claude_code.py  run_local_smoke.ps1  run_singleshot.py  run_stage.py  serve_model.sh  sg_tools.py  test_verify.py  tools.py  verify.py  verify_pro.py  vllm_bench.py
eval/backends/: __init__.py  aider_map.py  aider_repomap.py  bm25_flat.py  cbmem.py  dense.py  graphify.py  grep_sim.py  hybrid.py  summary_search.py
eval/curator/: __init__.py  curator.py  train.py
eval/datasets/: README.md  main100_task_ids.txt  setup_multilingual.py
eval/docs/: ARM_FLOWS.md  CLAUDE_CODE_RUNBOOK.md  PRO_PASS1_RUNBOOK.md
eval/judge/: master_prompt.txt
eval/scripts/: aggregate_metrics.py  amd_run.sh  arm_stats.py  clean_hybrid_predictions.py  compare_patches.py  contamination_check.py  expand_graphify_100.py  extract_contextbench.py  extract_tasks.py  full_analysis.py  graphify_prebuild.py  high_turns.py  inspect_pro.py  localization_metrics.py  make_figures.py  make_ide_runbooks.py  nim_codestral_smoke.md  parse_claude_logs.py  parse_ide_trace.py  record_result.py  run_claude_code.sh  run_probe.py  setup_workspaces.py  sg_failure_analysis.py  swe_bench_harness.py  sync_swe_bench.py  tighten_gold_fqns.py  tool_counts.py  verify_slm_removal.py  wsl_verify_v2.md
src/skeletongraph/: __init__.py  __main__.py  build.py  config.py  daemon.py  engine.py  eval_runner.py
src/skeletongraph/analytics/: centrality.py  visualizer.py
src/skeletongraph/assembly/: constraint_store.py  context_routing.py  modifier.py  prompt_builder.py  zone_assembler.py
src/skeletongraph/cli/: hooks.py  init.py  main.py  prepare.py  run_exec.py
src/skeletongraph/eval/: __init__.py  comparison.py  quality.py  report.py  schema.py  scorer.py  token_counter.py
src/skeletongraph/eval/benchmarks/: retrieval_quality.py  runner.py  token_efficiency.py
src/skeletongraph/eval/datasets/: base.py  crg_compat.py  swe_bench.py
src/skeletongraph/eval/parsers/: __init__.py  antigravity.py  claude_code.py  codex.py  copilot.py  cursor.py
src/skeletongraph/graph/: bloom.py  bm25.py  dependency.py  embeddings.py  inverted_index.py  pagerank.py
src/skeletongraph/hooks/: __init__.py  claude_code.py
src/skeletongraph/install/: __init__.py  claude_code.py  cursor.py  detect.py  mcp_only.py
src/skeletongraph/integrations/: antigravity.py  claude_code.py  codex.py  copilot.py  cursor.py  kiro.py  templates.py  windsurf.py
src/skeletongraph/llm/: provider.py  summarizer.py
src/skeletongraph/metrics/: __init__.py  log_parser.py  metrics_logger.py
src/skeletongraph/parser/: ast_extractor.py  edge_extractor.py  import_resolver.py  node_kinds.py  skeleton.py
src/skeletongraph/parser/languages/: cpp.py  csharp.py  go.py  java.py  php.py  python.py  ruby.py  rust.py  typescript.py
src/skeletongraph/retrieval/: budget.py  classifier.py  confidence.py  detect_changes.py  intent.py  model_router.py  ranker.py  resolver.py  session.py  slm_extractor.py
src/skeletongraph/server/: mcp.py
src/skeletongraph/session/: __init__.py  conversation_logger.py  decision_log.py  log.py  memory.py
src/skeletongraph/storage/: dirty.py  local.py  staleness.py
src/skeletongraph/summary/: __init__.py  local.py  ollama.py  queue.py  summary_store.py
tests/: test_docstring_first.py
tests/fixtures/python_small/auth/: __init__.py  exceptions.py  middleware.py  models.py
tests/integration/: test_pipeline.py
tests/unit/: test_ablations.py  test_ast_parser.py  test_bloom_index.py  test_cli_run_exec.py  test_config_cli_provider.py  test_eval_parsers.py  test_graph.py  test_local_summary.py  test_model_router.py  test_sg_chain_arm.py  test_skeleton.py
