[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skeletongraph"
version = "0.1.0"
description = "Token-minimal, constraint-preserving context assembly for AI coding agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = []
keywords = [
    "llm", "context", "coding-agent", "ast", "tree-sitter",
    "token-optimization", "mcp", "claude-code", "skeleton", "graph"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Environment :: Console",
]
dependencies = [
    # ── Core parsing (tree-sitter) ─────────────────────────────────────
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-cpp>=0.23",
    "tree-sitter-c-sharp>=0.23",
    "tree-sitter-ruby>=0.23",
    "tree-sitter-php>=0.23",
    # ── Core CLI / formatting / hashing ───────────────────────────────
    "click>=8.0",
    "mmh3>=4.0",
    "rich>=13.0",
    "tiktoken>=0.7.0",
    # ── Semantic retrieval (HARD dep — was an optional extra; silently
    # disabling it caused the v3 73-of-103 ablation embeddings regression).
    # See docs/RESEARCH.md §packaging. ─────────────────────────────────
    "sentence-transformers>=3.0,<4",
    "numpy>=1.24",
    # ── huggingface_hub is pinned because newer versions (>=0.30)
    # remove BucketNotFoundError, breaking datasets.hf_file_system and
    # cascading into sentence-transformers model load. Bump only after
    # validating all imports in `sg doctor`. ───────────────────────────
    "huggingface_hub>=0.20,<0.30",
    # ── litellm is optional — only needed for sg run --execute / sg summarize --tier cloud
    # Install with: pip install "skeletongraph[llm]"
]

[project.optional-dependencies]
llm = ["litellm>=1.0"]
mcp = ["mcp>=1.0"]
eval = ["pandas", "matplotlib", "seaborn", "swebench", "openai", "datasets<3"]
# Strong eval baselines — heavier deps, install separately:
#   pip install "skeletongraph[eval-strong]"
# aider-chat pulls a large dependency tree; install in a SEPARATE venv if
# it conflicts with your main env (`pip install -e .[eval]` then a sibling
# venv-aider for aider).
eval-strong = [
    "aider-chat>=0.82",
    "rank-bm25>=0.2",
]
daemon = ["watchdog>=3.0"]
# Kept for back-compat. sentence-transformers is now a hard dep; this
# extra is a no-op alias.
embeddings = []
dev = ["pytest", "pytest-cov", "ruff"]
all = ["skeletongraph[llm,mcp,eval,daemon,dev]"]

[project.scripts]
skeletongraph = "skeletongraph.cli.main:app"
sg = "skeletongraph.cli.main:app"

[project.urls]
Homepage = "https://github.com/yashdoke7/skeletongraph"
Documentation = "https://github.com/yashdoke7/skeletongraph/tree/main/docs"
Repository = "https://github.com/yashdoke7/skeletongraph"

[tool.hatch.build.targets.wheel]
packages = ["src/skeletongraph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
